--- a/package.json
+++ b/package.json
@@ -5,5 +5,13 @@
     "express": "^4.18.2",
     "knex": "^3.1.0",
     "pg": "^8.11.3"
-  }
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  },
+ 
+      "scripts": {
+        "dev": "nodemon ./src/index.js",
+        "node": "node ../src/index.js"
+      }
 }
